@@ -1,7 +1,7 @@
 package com.PetClinic.Management.System.service;
 
+
 import com.PetClinic.Management.System.dto.VetDto;
-import com.PetClinic.Management.System.entity.PetOwner;
 import com.PetClinic.Management.System.entity.Role;
 import com.PetClinic.Management.System.entity.Vet;
 import com.PetClinic.Management.System.repository.RoleRepository;
@@ -9,7 +9,6 @@ import com.PetClinic.Management.System.repository.VetRepository;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -20,13 +19,17 @@ public class VetServiceImpl implements VetService {
     private final RoleRepository roleRepository;
     private final PasswordEncoder passwordEncoder;
 
-
     public VetServiceImpl(VetRepository vetRepository,
-                          RoleRepository roleRepository,
-                          PasswordEncoder passwordEncoder) {
+                      RoleRepository roleRepository,
+                      PasswordEncoder passwordEncoder){
         this.vetRepository = vetRepository;
         this.roleRepository = roleRepository;
         this.passwordEncoder = passwordEncoder;
+    }
+
+    @Override
+    public Vet findVetByEmailAddress(String emailAddress) {
+        return vetRepository.findByEmailAddress(emailAddress);
     }
 
     @Override
@@ -37,21 +40,19 @@ public class VetServiceImpl implements VetService {
     @Override
     public void saveVet(VetDto vetDto) {
         Vet vet = new Vet();
-        vet.setName(vetDto.getFirstName() + " " + vetDto.getLastName());
+        vet.setFirstName(vetDto.getFirstName());
+        vet.setLastName(vetDto.getLastName());
+        vet.setIdNumber(vetDto.getIdNumber());
         vet.setEmailAddress(vetDto.getEmailAddress());
+        vet.setHomeAddress(vetDto.getHomeAddress());
         vet.setPassword(passwordEncoder.encode(vetDto.getPassword()));
 
-        Role role = roleRepository.findByName("ROLE_ADMIN");
+        Role role = roleRepository.findByName("ROLE_USER");
         if (role == null) {
             role = checkRoleExist();
         }
-        vet.setRoles(Arrays.asList(role));
+        vet.setRoles(List.of(role));
         vetRepository.save(vet);
-    }
-
-    @Override
-    public Vet findVetByEmailAddress(String emailAddress) {
-        return vetRepository.findByEmailAddress(emailAddress);
     }
 
     @Override
@@ -67,19 +68,18 @@ public class VetServiceImpl implements VetService {
         return vetRepository.findByIdNumber(idNumber);
     }
 
+
     private VetDto mapToVetDto(Vet vet){
         VetDto vetDto = new VetDto();
-        String[] str = vet.getName().split(" ");
-        vetDto.setFirstName(str[0]);
-        vetDto.setLastName(str[1]);
+        vetDto.setFirstName(vet.getFirstName());
+        vetDto.setLastName(vet.getLastName());
         vetDto.setEmailAddress(vet.getEmailAddress());
         return vetDto;
     }
 
     private Role checkRoleExist(){
         Role role = new Role();
-        role.setName("ROLE_ADMIN");
+        role.setName("ROLE_USER");
         return roleRepository.save(role);
     }
-
 }
